@@ -36,6 +36,11 @@ android {
   }
 }
 
+tasks.withType<Test>().configureEach {
+  // Robolectric accesses FileDescriptor internals when initializing Android shared memory.
+  jvmArgs("--add-opens=java.base/jdk.internal.access=ALL-UNNAMED")
+}
+
 dokka {
   moduleName.set("Clerk Android API")
   dokkaSourceSets.configureEach {
